# django-agency

./: .dockerignore  .env.example  .gitignore  .mise.toml  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  compose.yaml  docker-entrypoint.sh  main.py  manage.py  pyproject.toml
server_adoption/: asgi.py  settings.py  urls.py  wsgi.py
shelter/: admin.py  apps.py  context_processors.py  forms.py  models.py  storage.py  tests.py  urls.py  views.py
shelter/management/commands/: seed_shelter.py
shelter/migrations/: 0001_initial.py  0002_remove_has_stable_power.py  0003_serverportrait_alter_server_portrait.py
shelter/templates/shelter/: application_status.html  base.html  home.html  server_detail.html  server_list.html
shelter/templates/shelter/partials/: application_form.html  application_thanks.html  server_card.html  server_grid.html
shelter/templatetags/: shelter_extras.py
