[project]
name = "server-adoption"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.5",
    "django-htmx>=1.27.0",
    "gunicorn>=26.0.0",
    "pillow>=12.2.0",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "ruff==0.15.13",
    "ty>=0.0.36",
]
